--- a/aulas/aula01/gdrive-webapi/package.json
+++ b/aulas/aula01/gdrive-webapi/package.json
@@ -3,19 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "_prestart": " . ../../../untracked_files/environments.sh",
+    "start": "node src/index.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest -runInBand",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules npx jest --watch -runInBand",
+    "test:cov": "NODE_OPTIONS=--experimental-vm-modules npx jest --no-cache -runInBand --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.1.0",
-    "nodemon": "2.0"
+    "jest": "^27.1.0"
   },
   "dependencies": {
     "pino": "6.8",
     "pino-pretty": "5.1",
+    "pretty-bytes": "5.6",
     "socket.io": "4.1"
   }
 }
